microservices/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avsdevops-website
  namespace: avsdevops
  labels:
    app.kubernetes.io/name: avsdevops-website
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: avsdevops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avsdevops-website
                port:
                  name: http
